--- a/package.json
+++ b/package.json
@@ -1,6 +1,31 @@
 {
-  "name": "katschangular-tri-toggle-app",
-  "version": "0.0.0",
+  "name": "katschangular-three-states-toggle-app",
+  "version": "1.0.0",
+  "description": "Simple Toggle Switch with three states based on Angular Material",
+  "author": "Tobias Karzewski <tobias@karzewski.de>",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/tkarzewski/katschangular-three-states-toggle.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tkarzewski/katschangular-three-states-toggle/issues"
+  },
+  "homepage": "https://tkarzewski.github.io/katschangular-three-states-toggle",
+  "keywords": [
+    "angular",
+    "ng",
+    "ng2",
+    "ngx",
+    "toggle",
+    "switch",
+    "three states",
+    "input",
+    "form",
+    "checkbox",
+    "boolean",
+    "component"
+  ],
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -9,22 +34,27 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
+  "private": false,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "~8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "bootstrap": "^4.4.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.803.19",
+    "@angular-devkit/build-ng-packagr": "~0.803.25",
     "@angular/cli": "~8.3.19",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
@@ -39,8 +69,10 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "ng-packagr": "^5.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "tsickle": "^0.37.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
   }
