--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,18 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@angular/*": [
+        "./node_modules/@angular/*"
+      ],
+      "katschangular-three-states-toggle": [
+        "dist/katschangular-three-states-toggle"
+      ],
+      "katschangular-three-states-toggle/*": [
+        "dist/katschangular-three-states-toggle/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
