--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
       ],
       "katschangular-three-states-toggle/*": [
         "dist/katschangular-three-states-toggle/*"
-      ]
+      ],
+      "KatschangularThreeStatesToggle": [
+        "dist/katschangular-three-states-toggle"
+      ],
     }
   },
   "angularCompilerOptions": {
